# rtmaps-ros-migration-concepts

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md  ros_to_rtmaps.pckinfo
cpp/minimal_publisher_cpp/: rtmaps_minimal_publisher.cpp  rtmaps_minimal_publisher.h
cpp/minimal_subscriber_cpp/: rtmaps_minimal_subscriber.cpp  rtmaps_minimal_subscriber.h
python/: README.md
python/minimal_publisher_python/: rtmaps_minimal_publisher.py
python/minimal_subscriber_python/: rtmaps_minimal_subscriber.py
